# Ping-Pong-Jira-

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.py  game_stats.json  game_stats.py  pong_game.py  pyproject.toml  requirements.txt  setup.py  ticket_status_report.md
demo/: screenshots.md
tests/: test_game.py
